Added Analytics page and updated navigation

--- a/ChatGPT.html
+++ b/ChatGPT.html
@@ -219,6 +219,7 @@
                 <li><a href="About.html" class="nav-link">ABOUT</a></li>
                 <li><a href="ChatGPT.html" class="nav-link active">ChatGPT</a></li>
                 <li><a href="Tools.html" class="nav-link">Tools</a></li>
+                <li><a href="Analytics.html" class="nav-link">Analytics</a></li>
             </ul>
         </div>
     </nav>
