--- a/Tools.html
+++ b/Tools.html
@@ -10,6 +10,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/pptxgenjs@3.12.0/dist/pptxgen.bundle.js"></script>
+    <!-- Vercel Analytics -->
+    <script defer src="/_vercel/insights/script.js"></script>
     <style>
         /* Additional styles for tools page */
         .tools-section {
@@ -202,7 +204,7 @@
                 <li><a href="About.html" class="nav-link">ABOUT</a></li>
                 <li><a href="ChatGPT.html" class="nav-link">ChatGPT</a></li>
                 <li><a href="Tools.html" class="nav-link active">Tools</a></li>
-
+                <li><a href="Analytics.html" class="nav-link">Analytics</a></li>
             </ul>
         </div>
     </nav>
